[package]
name = "multiset-hash"
description = "An incremental hash function for multi-sets."
license = "MIT"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
digest = "0.9.0"
curve25519-dalek = "3.1.0"

[dev-dependencies]
sha2 = "0.9.5"
